Add Class added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body>
+<body class="full-website">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 
